(executable
 (name run_snark_worker)
 (libraries snark_worker core_kernel async core base genesis_constants async_kernel
            base.caml

key_gen
graphql-async
ctypes
async.async_command
async.async_quickcheck
async.async_rpc
async_ssl
async_ssl.bindings
typerep
uri
uri.services
splittable_random
stringext
base58
ppx_assert.runtime-lib
base.base_internalhash_types
base.md5
base.shadow_stdlib
angstrom
sexplib
sexplib.unix
ppx_bench.runtime-lib
result
fieldslib
ppx_bin_prot
ppx_bin_prot.shape-expander
ppx_expect.collector
ppx_expect.common
ppx_expect.config
astring
base64
ipaddr
ipaddr.unix
extlib
stdlib-shims
bignum
bignum.bigint
ppx_enumerate.runtime-lib
ppx_deriving.runtime
conduit
seq
async_kernel.persistent_connection_kernel
bitstring
core_kernel.balanced_reducer
core_kernel.base_for_tests
core_kernel.binary_packing
core_kernel.bounded_int_table
core_kernel.composition_infix
core_kernel.fheap
core_kernel.flags
core_kernel.hash_heap
core_kernel.int_set
core_kernel.limiter
core_kernel.moption
core_kernel.pairing_heap
core_kernel.pooled_hashtbl
core_kernel.rope
core_kernel.sexp_hidden_in_test
core_kernel.thread_pool_cpu_affinity
core_kernel.thread_safe_queue
core_kernel.timing_wheel
core_kernel.total_map
core_kernel.tuple_pool
core_kernel.univ
core_kernel.unpack_buffer
core_kernel.uopt
core_kernel.uuid
core_kernel.version_util
core_kernel.weak_array
core_kernel.weak_hashtbl
core_kernel.weak_pointer
logs
zarith_stubs_js
biniou
integers
ppx_sexp_conv.runtime-lib
ocaml-migrate-parsetree
magic-mime
ipaddr-sexp
re2
re2.c
variantslib
ppx_hash.runtime-lib
ocamlgraph
num
jane-street-headers
graphql-cohttp
rresult
re
ocplib-endian
ppxlib
ppxlib.ast
ppxlib.print_diff
ppxlib.traverse_builtins
core.error_checking_mutex
core.nano_mutex
core.squeue
core.time_stamp_counter
core.uuid
fmt
graphql_parser
ppx_compare.runtime-lib
bisect_ppx.common
bisect_ppx.runtime
spawn
sexplib0
async_unix
async_unix.thread_pool
async_unix.thread_safe_ivar
eqaf
domain-name
ppx_module_timer.runtime
yojson
async_rpc_kernel
time_now
uri-sexp
lwt
conduit-async
bigarray-compat
bytes
base_quickcheck
protocol_version_header
bigstringaf
ppx_inline_test.config
ppx_inline_test.runtime-lib
stdio
ppx_derivers
cohttp
easy-format
zarith
jemalloc
macaddr
bin_prot
bin_prot.shape
graphql
sexp_diff_kernel
base_bigstring
cohttp-async
parsexp
ppx_here.expander
ppx_here.runtime-lib
compiler-libs
threads
digestif.c
digestif.rakia
asetmap
ocaml-compiler-libs.common
ocaml-compiler-libs.shadow
rocks
ppx_deriving_yojson.runtime
ppx_version.runtime
prometheus
allocation_functor
base58_check
bignum_bigint
blake2
block_time
blockchain_snark
bowe_gabizon_hash
cache_dir_native
codable
consensus
consensus_vrf






















random_oracle
signature_lib
; zexe_backend
run_in_thread_native
; zexe_backend_common
crypto_params
currency
data_hash_lib
debug_assert
direction
dummy_values
empty_hashes
error_json
file_system
genesis_ledger
global_signer_private_key
graphql_lib
hash_prefix_states
hash_prefixes
hex
immutable_array
interruptible
key_cache
key_value_database
ledger_proof
linked_tree
logger
interpolator_lib
logproc_lib
merkle_address
merkle_ledger
merkle_mask
mina_base
mina_compile_config
mina_metrics_prometheus
mina_numbers
mina_state
mina_version_normal
network_peer
non_empty_list
non_zero_curve_point
o1trace
one_or_two
outside_hash_image
perf_histograms
pickles
backend
composition_types
limb_vector
one_hot_vector
plonk_checks
precomputed
pseudo
pickles_base
pickles_types
pipe_lib
ppx_representatives_runtime
ppx_dhall_type
quickcheck_lib
random_oracle_input
rc_pool
rocksdb
rose_tree
rosetta_coding
runtime_config
sgn
sgn_type
mina_signature_kind_config
snark_bits
snark_keys_header
snark_params
snark_work_lib
bitstring_lib
fold_lib
group_map
h_list
interval_union
snarkette
snarky_curve
snarky_integer
sponge
snarky.backendless
snarky.intf
tuple_lib
snarky_curves
snarky_field_extensions
snarky_group_map
snarky_log
snarky_taylor
sparse_ledger_lib
storage
structured_log_events
syncable_ledger
test_genesis_ledger
test_util
timeout_lib
transaction_protocol_state
transaction_snark
transaction_snark_work
transaction_witness
trust_system
unix_timestamp
unsigned_extended
visualization
vrf_lib
webkit_trace_event
with_hash
 )
 (instrumentation (backend bisect_ppx))
 (preprocess (pps ppx_let ppx_custom_printf ppx_version)))
